[package]
name = "routing"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "routing"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.23.0"
interledger = { git = "https://github.com/everknow/interledger-rs", branch="dom-fix" }
#interledger = { path = "/Users/david.magalhaes/work/eq/forte/everknow/interledger-rs" }
# hex = "0.4.0"
# chrono = "0.4.9"
bytes = { version = "1.0.1" }
# once_cell = { version = "1.3.1", default-features = false }
tracing = { version = "0.1.12", default-features = false, features = ["log"] }

